--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
         environment:
           RAILS_ENV: test
           TZ: /usr/share/zoneinfo/Asia/Tokyo
+          DATABASE_URL: mysql2://root@127.0.0.1:3306
       - image: mysql:8.0
         environment:
           MYSQL_USER: root
