--- a/config/database.yml
+++ b/config/database.yml
@@ -29,6 +29,7 @@ test:
   <<: *default
   database: app_test
   host: db
+  url: <%= ENV['DATABASE_URL'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
