--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
         environment:
           RAILS_ENV: test
           TZ: /usr/share/zoneinfo/Asia/Tokyo
-          DATABASE_URL: mysql2://root@localhost:3306
+          DB_HOST: localhost
 
       - image: mysql:8.0
         environment:
