--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 jobs:
   build:
+    working_directory: ~/app
     docker:
       - image: circleci/ruby:2.6.0-stretch-node
         environment:
