--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Database server
-DB_HOST = "db"
-DB_USER = "root"
-DB_PASS = ""
+APP_DATABASE_HOST=db
+APP_DATABASE_USER=root
+APP_DATABASE_PASSWORD=
 
 # Error log tracking (only set on prod)
-SENTRY_DSN = ""
+SENTRY_DSN=
