--- a/config/database.yml
+++ b/config/database.yml
@@ -12,15 +12,14 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: localhost
+  pool:     <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV['APP_DATABASE_USER'] || 'root' %>
+  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
+  host:     <%= ENV['APP_DATABASE_HOST'] || 'localhost' %>
 
 development:
   <<: *default
   database: app_development
-  host: db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -28,7 +27,6 @@ development:
 test:
   <<: *default
   database: app_test
-  host: <%= ENV['DB_HOST'] || 'db' %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -52,5 +50,4 @@ test:
 production:
   <<: *default
   database: app_production
-  username: app
-  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
+
