--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
         environment:
           RAILS_ENV: test
           TZ: /usr/share/zoneinfo/Asia/Tokyo
-          DB_HOST: 127.0.0.1
+          APP_DATABASE_HOST: 127.0.0.1
 
       - image: mysql:5.7
         environment:
