--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     <<: *app
     command: >
       sh -c "bundle install --jobs 4 &&
-             bundle exec rails s -p 3000 -b '0.0.0.0'"
+             bundle exec rails s"
 #            bundle exec rails webpacker:install
     ports:
       - 3000:3000
