fix Race Conditions - Wait For Database issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
           paths:
             - vendor/bundle
       - run:
+          name: wait for db container
+          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 1m
+      - run:
           name: db:migrate
           command: ./bin/rails db:create db:migrate
       - run:
