--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ APP_DATABASE_PASSWORD=
 
 # Error log tracking (only set on prod)
 SENTRY_DSN=
+
+# REDIS
+REDIS_URL=redis://redis:6379
+
+# Sidekiq web
+SIDEKIQ_USERNAME=admin
+SIDEKIQ_PASSWORD=
