--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,10 @@ services:
   web:
     <<: *app
     command: >
-      sh -c "bundle install --jobs 4 &&
-             bundle exec rails s"
-#            bundle exec rails webpacker:install
+      sh -c "rm -f tmp/pids/server.pid;
+              bundle install --jobs 4 &&
+              bundle exec rails s -b 0.0.0.0"
+#             bundle exec rails webpacker:install
     ports:
       - 3000:3000
 
@@ -41,7 +42,7 @@ services:
       MYSQL_INNODB_LARGE_PREFIX: 1
 
   redis:
-    image: redis:latest
+    image: redis:5.0-alpine
     ports:
       - 3020:6379
 
