add some useful gems

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,11 @@ Metrics/BlockLength:
 Layout/LineLength:
   Max: 120
 
+Metrics/MethodLength:
+  Max: 20
+  Exclude:
+    - "db/migrate/**/*"
+
 Metrics/ClassLength:
   Max: 200
   Exclude:
